@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * -------------------------
  * WaterfallBarRenderer.java
  * -------------------------
- * (C) Copyright 2003-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2003-2008, by Object Refinery Limited and Contributors.
  *
  * Original Author:  Darshan Shah;
  * Contributor(s):   David Gilbert (for Object Refinery Limited);
@@ -49,6 +49,7 @@
  *               --> CategoryItemLabelGenerator (DG);
  * 09-Jun-2005 : Use addItemEntity() from superclass (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
+ * 27-Mar-2008 : Fixed error in findRangeBounds() method (DG);
  * 
  */
 
@@ -63,7 +64,6 @@ import java.awt.geom.Rectangle2D;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
-import java.io.Serializable;
 
 import org.jfree.chart.axis.CategoryAxis;
 import org.jfree.chart.axis.ValueAxis;
@@ -75,23 +75,25 @@ import org.jfree.chart.plot.PlotOrientation;
 import org.jfree.chart.renderer.AbstractRenderer;
 import org.jfree.chart.util.GradientPaintTransformType;
 import org.jfree.chart.util.PaintUtilities;
-import org.jfree.chart.util.PublicCloneable;
 import org.jfree.chart.util.RectangleEdge;
 import org.jfree.chart.util.SerialUtilities;
 import org.jfree.chart.util.StandardGradientPaintTransformer;
 import org.jfree.data.Range;
 import org.jfree.data.category.CategoryDataset;
-import org.jfree.data.general.DatasetUtilities;
 
 /**
  * A renderer that handles the drawing of waterfall bar charts, for use with 
- * the {@link CategoryPlot} class.  Note that the bar colors are defined 
- * using special methods in this class - the inherited methods (for example,
- * {@link AbstractRenderer#setSeriesPaint(int, Paint)}) are ignored.
+ * the {@link CategoryPlot} class.  Some quirks to note:
+ * <ul>
+ * <li>the value in the last category of the dataset should be (redundantly) 
+ *   specified as the sum of the items in the preceding categories - otherwise
+ *   the final bar in the plot will be incorrectly plotted;</li>
+ * <li>the bar colors are defined using special methods in this class - the 
+ *   inherited methods (for example, 
+ *   {@link AbstractRenderer#setSeriesPaint(int, Paint)}) are ignored;</li>
+ * </ul>
  */
-public class WaterfallBarRenderer extends BarRenderer 
-                                  implements Cloneable, PublicCloneable, 
-                                             Serializable {
+public class WaterfallBarRenderer extends BarRenderer {
 
     /** For serialization. */
     private static final long serialVersionUID = -2482910643727230911L;
@@ -171,7 +173,43 @@ public class WaterfallBarRenderer extends BarRenderer
      * @return The range (or <code>null</code> if the dataset is empty).
      */
     public Range findRangeBounds(CategoryDataset dataset) {
-        return DatasetUtilities.findCumulativeRangeBounds(dataset);   
+          
+        if (dataset == null) {
+            throw new IllegalArgumentException("Null 'dataset' argument.");
+        }
+            
+        boolean allItemsNull = true; // we'll set this to false if there is at 
+                                     // least one non-null data item... 
+        double minimum = 0.0;
+        double maximum = 0.0;
+        int columnCount = dataset.getColumnCount();
+        for (int row = 0; row < dataset.getRowCount(); row++) {
+            double runningTotal = 0.0;
+            for (int column = 0; column <= columnCount - 1; column++) {
+                Number n = dataset.getValue(row, column);
+                if (n != null) {
+                    allItemsNull = false;
+                    double value = n.doubleValue();
+                    if (column == columnCount - 1) {
+                    	// treat the last column value as an absolute
+                    	runningTotal = value;
+                    }
+                    else {
+                        runningTotal = runningTotal + value;
+                    }
+                    minimum = Math.min(minimum, runningTotal);
+                    maximum = Math.max(maximum, runningTotal);
+                }
+            } 
+            
+        }
+        if (!allItemsNull) {
+            return new Range(minimum, maximum);
+        }
+        else {
+            return null;
+        }
+            
     }
 
     /**
@@ -194,7 +232,7 @@ public class WaterfallBarRenderer extends BarRenderer
             throw new IllegalArgumentException("Null 'paint' argument");   
         }
         this.firstBarPaint = paint;
-        notifyListeners(new RendererChangeEvent(this));
+        fireChangeEvent();
     }
 
     /**
@@ -207,7 +245,8 @@ public class WaterfallBarRenderer extends BarRenderer
     }
     
     /**
-     * Sets the paint that will be used to draw the last bar.
+     * Sets the paint that will be used to draw the last bar and sends a 
+     * {@link RendererChangeEvent} to all registered listeners.
      *
      * @param paint  the paint (<code>null</code> not permitted).
      */
@@ -216,7 +255,7 @@ public class WaterfallBarRenderer extends BarRenderer
             throw new IllegalArgumentException("Null 'paint' argument");   
         }
         this.lastBarPaint = paint;
-        notifyListeners(new RendererChangeEvent(this));
+        fireChangeEvent();
     }
 
     /**
@@ -238,7 +277,7 @@ public class WaterfallBarRenderer extends BarRenderer
             throw new IllegalArgumentException("Null 'paint' argument");   
         }
         this.positiveBarPaint = paint;
-        notifyListeners(new RendererChangeEvent(this));
+        fireChangeEvent();
     }
 
     /**
@@ -251,7 +290,8 @@ public class WaterfallBarRenderer extends BarRenderer
     }
     
     /**
-     * Sets the paint that will be used to draw bars having negative values.
+     * Sets the paint that will be used to draw bars having negative values,
+     * and sends a {@link RendererChangeEvent} to all registered listeners.
      *
      * @param paint  the paint (<code>null</code> not permitted).
      */
@@ -260,7 +300,7 @@ public class WaterfallBarRenderer extends BarRenderer
             throw new IllegalArgumentException("Null 'paint' argument");   
         }
         this.negativeBarPaint = paint;
-        notifyListeners(new RendererChangeEvent(this));
+        fireChangeEvent();
     }
 
     /**
