@@ -1,5 +1,14 @@
 2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 1927239:
+    * source/org/jfree/chart/renderer/category/WaterfallBarRenderer.java
+    (findRangeBounds): Reimplemented to account for the special treatment of
+    the value in the final category,
+    * source/org/jfree/data/general/DatasetUtilities.java
+    (findCumulativeRangeBounds): Include final category.
+    
+2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>
+
     Bug 1926517:
     * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java:
     (getDataRange): Override just to document,
